--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "crypto-js": "^4.0.0",
     "vant": "^2.11.2",
     "vue": "^2.6.11",
     "vue-amap": "^0.5.10",
