--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "crypto-js": "^4.0.0",
     "vant": "^2.11.2",
     "vue": "^2.6.11",
     "vue-amap": "^0.5.10",
+    "vue-axios": "^3.2.0",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
